--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,7 +1,8 @@
 
 [General]
 network =  RemoteExecutionNetwork
-sim-time-limit = 100
+sim-time-limit = 100s
+simtime-resolution = s
 **.client[*].numElements = 100 
 **.client[*].elementMin = 0 
 **.client[*].elementMax = 1000 
